# pattern

./: .travis.yml  CMakeLists.txt  README.md  build.sh
include/: counter.h  list.h  map.h  mapper.h  pattern.h
lib/: CMakeLists.txt
lib/include/: cluster.h  hashmap.h  mapper.h  part_stream.h  pstream.h  slist.h
lib/src/: cluster.c  hashmap.c  list.c  mapper.c  part_stream.c  pstream.c  slist.c
lib/tests/: CMakeLists.txt  test_cluster.c  test_hashmap.c  test_slist.c
src/: CMakeLists.txt  counter.c  list.c  map.c  mapper.c  pattern.c  reduce.c
tests/: CMakeLists.txt  test_cluster.c  test_lines.c  test_list.c  test_mapper.c  utest.sh
tests/refs/: 0003.args  0004.args  0004.txt  0005.args
